Background and favicon

--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>Hi! I'm hosted with GitHub Pages.</p>
-</body>
+    <style>
+        div {
+          width: 1000px;
+          height: 1000px;
+          margin: auto;
+          background-color: #ff7300;
+        }
+    </style>
+    <head>
+        <style>
+            body 
+            {
+                background-image: url('images/opt1.png');
+            }
+        </style>
+        <link rel="icon" type="image/x-icon" href="images/logo.jpg">
+    </head>
+    <body>
+        <div>
+        <h1>Hello World</h1>
+        <p>Hi! I'm hosted with GitHub Pages.</p>
+        </div>
+    </body>
 </html>
