--- a/index.html
+++ b/index.html
@@ -1,26 +1,68 @@
-<!DOCTYPE html>
-<html>
-    <style>
-        div {
-          width: 1000px;
-          height: 1000px;
-          margin: auto;
-          background-color: #ff7300;
-        }
-    </style>
-    <head>
-        <style>
-            body 
-            {
-                background-image: url('images/opt1.png');
-            }
-        </style>
-        <link rel="icon" type="image/x-icon" href="images/logo.jpg">
-    </head>
-    <body>
-        <div>
-        <h1>Hello World</h1>
-        <p>Hi! I'm hosted with GitHub Pages.</p>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
+    <title>Microfacet website</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="icon" type="image/x-icon" href="images/logo_small.png">
+  </head>
+  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
+    <!-- Navbar -->
+    
+    <div class="mx-auto p-2" style="width: 960px;">
+      <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo_small.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+            MicroFacet.io
+          </a>
+          <ul class="nav justify-content-end">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Downloads</a>
+            </li>
+          </ul>
         </div>
-    </body>
+    </nav> 
+
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/slide1.png" alt="Logo" width="960" height="540">
+          </div>
+          <div class="carousel-item">
+            <img src="images/slide2.png" alt="Logo" width="960" height="540">
+          </div>
+          <div class="carousel-item">
+            <img src="images/slide3.png" alt="Logo" width="960" height="540">
+          </div>
+          <div class="carousel-item">
+            <img src="images/slide4.png" alt="Logo" width="960" height="540">
+          </div>
+          <div class="carousel-item">
+            <img src="images/slide5.png" alt="Logo" width="960" height="540">
+          </div>
+          <div class="carousel-item">
+            <img src="images/slide6.png" alt="Logo" width="960" height="540">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </div>
+  </body>
 </html>
