--- a/index.html
+++ b/index.html
@@ -12,27 +12,41 @@
   <body class="p-3 m-0 border-0 bd-example m-0 border-0">
     <!-- Navbar -->
     
-    <div class="mx-auto p-2" style="width: 960px;">
-      <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="images/logo_small.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
+    
+    <nav class="navbar fixed-top bg-body-tertiary" data-bs-theme="dark">
+      <div class="container-fluid" style="width: 960px;">
+        <a class="navbar-brand" href="#">
+          <p class="fs-1">
+            <img src="images/logo_small.png" alt="Logo" width="60" height="60" 
+              class="d-inline-block align-text-top">
             MicroFacet.io
-          </a>
-          <ul class="nav justify-content-end">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Downloads</a>
-            </li>
-          </ul>
-        </div>
+          </p>
+        </a>
+
+        <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://x.com/microfacet_io">
+              <img src="images/twitter_logo.png" alt="Logo" width="25" height="25" 
+              class="d-inline-block align-text-top">
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.linkedin.com/company/microfacet-io/">
+              <img src="images/linkedin_logo.png" alt="Logo" width="25" height="25" 
+              class="d-inline-block align-text-top">
+            </a>
+          </li>
+        </ul>
+      </div>
     </nav> 
 
+    <div class="mx-auto p-2" style="width: 960px;">
       <div id="carouselExample" class="carousel slide">
         <div class="carousel-inner">
           <div class="carousel-item active">
