--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet">
     <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
     <title>Microfacet website</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js">
+    </script>
     <link rel="icon" type="image/x-icon" href="images/logo_small.png">
   </head>
-  <body class="p-3 m-0 border-0 bd-example m-0 border-0">
-    <!-- Navbar -->
+  <body class="p-3 mb-2 bg-dark text-dark-emphasis">
     
-    
+    <!-- Navbar -->    
     <nav class="navbar fixed-top bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid" style="width: 960px;">
         <a class="navbar-brand" href="#">
@@ -46,8 +47,8 @@
       </div>
     </nav> 
 
-    <div class="mx-auto p-2" style="width: 960px;">
-      <div id="carouselExample" class="carousel slide">
+    <div class="mx-auto p-2 mb-3" style="width: 960px;">
+      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="images/slide1.png" alt="Logo" width="960" height="540">
@@ -68,11 +69,13 @@
             <img src="images/slide6.png" alt="Logo" width="960" height="540">
           </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+         data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+         data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </button>
